[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Raina_Action_Pose_1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PatrolDummyEnemy.gd" type="Script" id=4]
[ext_resource path="res://Scenes/EnemyOverlapController.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.3435, 84.3352 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 166.249, 161.416 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 196.354, 196.127 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3923.45, 194.332 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 500 )

[node name="Root" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="BlackBackground" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -7.39209
margin_right = 7672.61
margin_bottom = 4320.0
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Player" type="KinematicBody2D" parent="." groups=[
"Player",
]]
editor/display_folded = true
position = Vector2( 3550.26, 1479.6 )
scale = Vector2( 5, 5 )
script = ExtResource( 2 )
horizontal_acceleration = 150

[node name="PlayerBox" type="CollisionShape2D" parent="Player"]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( -12.4333, 0.73941 )
z_index = 1
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="Enemy" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 3620.24, 3006.81 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )
movement_speed = 1500
melee_range = 400

[node name="Sprite" type="Sprite" parent="Enemy"]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="CollisionCollider" type="CollisionShape2D" parent="Enemy"]
shape = SubResource( 2 )

[node name="OverlapArea" type="Area2D" parent="Enemy"]
editor/display_folded = true
scale = Vector2( 1.28, 0.92 )
script = ExtResource( 5 )

[node name="OverlapCollider" type="CollisionShape2D" parent="Enemy/OverlapArea"]
modulate = Color( 0.0509804, 0.941176, 0, 1 )
shape = SubResource( 3 )

[node name="RightRange" type="RayCast2D" parent="Enemy"]
cast_to = Vector2( 2000, 0 )
collision_mask = 1025

[node name="LeftRange" type="RayCast2D" parent="Enemy"]
cast_to = Vector2( -2000, 0 )
collision_mask = 1025

[node name="ChaseTimer" type="Timer" parent="Enemy"]
wait_time = 0.25

[node name="AttackTimer" type="Timer" parent="Enemy"]

[node name="Ground" type="StaticBody2D" parent="." groups=[
"Ground",
]]
editor/display_folded = true
position = Vector2( 7.02271, -35.1133 )

[node name="Ground" type="TextureRect" parent="Ground"]
self_modulate = Color( 0.984314, 0.0666667, 0.0666667, 1 )
margin_left = 8.0
margin_top = 3992.0
margin_right = 1541.0
margin_bottom = 4056.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
stretch_mode = 2

[node name="CollisionBox" type="CollisionShape2D" parent="Ground"]
modulate = Color( 0, 0.133333, 1, 1 )
position = Vector2( 3854.1, 4174.79 )
shape = SubResource( 4 )

[node name="LeftBounds" type="StaticBody2D" parent="Ground" groups=[
"LeftLimit",
]]
editor/display_folded = true
collision_layer = 4
collision_mask = 4

[node name="CollisionBox" type="CollisionShape2D" parent="Ground/LeftBounds"]
modulate = Color( 0.384314, 1, 0, 1 )
position = Vector2( 80.9955, 3486.03 )
shape = SubResource( 5 )

[node name="RightBounds" type="StaticBody2D" parent="Ground" groups=[
"RightLimit",
]]
editor/display_folded = true
position = Vector2( 7491, -6.50732 )
collision_layer = 4
collision_mask = 4

[node name="CollisionBox" type="CollisionShape2D" parent="Ground/RightBounds"]
modulate = Color( 0.384314, 1, 0, 1 )
position = Vector2( 80.9955, 3486.03 )
shape = SubResource( 5 )

[node name="Ground2" type="StaticBody2D" parent="." groups=[
"Ground",
]]
editor/display_folded = true
position = Vector2( 5849.68, -1382.65 )

[node name="Ground" type="TextureRect" parent="Ground2"]
self_modulate = Color( 0.984314, 0.0666667, 0.0666667, 1 )
margin_left = 8.0
margin_top = 3992.0
margin_right = 1541.0
margin_bottom = 4056.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
stretch_mode = 2

[node name="CollisionBox" type="CollisionShape2D" parent="Ground2"]
modulate = Color( 0, 0.133333, 1, 1 )
position = Vector2( 3854.1, 4174.79 )
shape = SubResource( 4 )

[node name="LeftBounds" type="StaticBody2D" parent="Ground2" groups=[
"LeftLimit",
]]
editor/display_folded = true
collision_layer = 2
collision_mask = 2

[node name="CollisionBox" type="CollisionShape2D" parent="Ground2/LeftBounds"]
modulate = Color( 0.384314, 1, 0, 1 )
position = Vector2( 80.9955, 3486.03 )
shape = SubResource( 5 )

[node name="RightBounds" type="StaticBody2D" parent="Ground2" groups=[
"RightLimit",
]]
editor/display_folded = true
position = Vector2( 7491, -6.50732 )
collision_layer = 2
collision_mask = 2

[node name="CollisionBox" type="CollisionShape2D" parent="Ground2/RightBounds"]
modulate = Color( 0.384314, 1, 0, 1 )
position = Vector2( 80.9955, 3486.03 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Enemy/OverlapArea" to="Enemy/OverlapArea" method="_on_OverlapArea_body_entered"]
[connection signal="timeout" from="Enemy/ChaseTimer" to="Enemy" method="_on_ChaseTimer_timeout"]
